--- a/BenchBnb/Gemfile
+++ b/BenchBnb/Gemfile
@@ -47,7 +47,7 @@ group :development do
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
   gem 'better_errors'
-  gem 'binding of caller'
+  gem 'binding_of_caller'
   gem 'pry-rails'
   gem 'annotate'
   gem 'bcrypt'
